--- a/next-app/package.json
+++ b/next-app/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
     "next": "15.2.4",
     "pinyin-pro": "^3.26.0",
     "react": "^19.0.0",
