--- a/next-app/package.json
+++ b/next-app/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tykok/cedict-dictionary": "^2.7.14",
     "clsx": "^2.1.1",
     "lucide-react": "^0.535.0",
     "next": "15.2.4",
