--- a/next-app/package.json
+++ b/next-app/package.json
@@ -9,23 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/groq": "^2.0.7",
+    "@ai-sdk/openai": "^2.0.12",
     "@tykok/cedict-dictionary": "^2.7.14",
+    "add": "^2.0.6",
+    "ai": "^5.0.12",
     "clsx": "^2.1.1",
     "lucide-react": "^0.535.0",
-    "next": "15.2.4",
+    "next": "^15.4.6",
+    "openai": "^5.12.2",
     "pinyin-pro": "^3.26.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "zod": "^4.0.17"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
+    "@types/node": "^24.2.1",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
     "tailwindcss": "^4",
-    "typescript": "^5"
-  }
+    "typescript": "^5.9.2"
+  },
+  "packageManager": "yarn@4.9.2"
 }
